Kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: default
#   name: ingress
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: youtube-clone
#               port:
#                 number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: default
#   name: ingress
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8000}]'
# spec:
#   ingressClassName: alb
#   rules:
#     - host: netflix.myanmartechsolutions.site
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: youtube-clone
#                 port:
#                   number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:537467926164:certificate/aa669601-04ad-4e78-96a2-077ac68623b6
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: youtube.myanmartechsolutions.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youtube-clone
            port:
              number: 80
  # - host: netflix.myanmartechsolutions.site
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: netflix-app
  #           port:
  #             number: 80
